# geoprops

./: .env-setup.md  GeoProps_Design_Document.md  README.md  benchmark_all_methods.py  benchmark_gpu.py  pyproject.toml
.claude/: settings.local.json
geoprops/: __init__.py  api.py  config.py  result.py  version.py
geoprops/blocks/: __init__.py  model.py
geoprops/core/: __init__.py  base.py  raycasting.py
geoprops/gpu/: __init__.py  context.py  depth_peeling.py  gpu_raycasting.py
geoprops/mesh/: __init__.py  io.py  mesh.py
geoprops/operations/: __init__.py
geoprops/polygons/: __init__.py  polygon.py
geoprops/utils/: __init__.py
geoprops/validation/: __init__.py
tests/unit/: test_basic_imports.py  test_cpu_calculator.py  test_gpu_calculator.py  test_mesh_io.py  test_point_containment.py
